source/blender/editors/gpencil/gpencil_data.c
@@ -2910,6 +2910,7 @@ int ED_gpencil_join_objects_exec(bContext *C, wmOperator *op)
   DEG_relations_tag_update(bmain); /* because we removed object(s) */
 
   WM_event_add_notifier(C, NC_SCENE | ND_OB_ACTIVE, scene);
+  WM_event_add_notifier(C, NC_SCENE | ND_LAYER_CONTENT, scene);
 
   return OPERATOR_FINISHED;
 }
